# rust_binding_examples

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: node.yml  test-python.yml  test-rust.yml
amazing_calc/: Cargo.toml
amazing_calc/src/: lib.rs
node/: Cargo.toml  index.js  package.json
node/npm/darwin-x64/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
python/: Cargo.toml  Pipfile  README.md  pyproject.toml  setup.cfg  test_install.sh
python/pysrc/amazing_calc/: __init__.py  amazing_calc.pyi
python/src/: lib.rs
python/tests/: test_amazing_calc.py
