[package]
name = "python"
version = "0.1.17"
edition = "2021"

[lib]
name = "amazing_calc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
amazing_calc = { path = "../amazing_calc" }

[dev-dependencies]

[package.metadata.maturin]

python-source = "pysrc"
