[metadata]
name = amazing_calc
description = Amazing Calc
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
author = Yui Kitsu
author_email = kitsuyui+github@kitsuyui.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10